--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon -e '*'"
-
   },
   "author": "Marylyn Uzoukwu",
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.47.2",
+    "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "nodemon": "^3.1.7"
   }
